--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "jquery101",
+  "name": "calculette",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "jQuery": "^1.7.4",
-    "jquery": "^3.1.1"
-  },
-  "devDependencies": {},
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Liliatux/Calculette.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Liliatux/Calculette/issues"
+  },
+  "homepage": "https://github.com/Liliatux/Calculette#readme",
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "semantic-ui": "^2.2.4"
+  }
 }
